grammar.js
    source_file: $ => seq(
      // NOTE: consider allowing partial statements and expressions
      // to allow parsing of code snippets in documentation
      $.library_statement,
      repeat($._top_level_statement)
    ),

    library_statement: $ => seq(
      'lib',
      $.identifier
    ),

    _top_level_statement: $ => choice(
      $.function_statement,
      $.struct_statement,
      $.enum_statement,
      $.type_statement,
      $.type_alias_statement,
      $.union_statement,
      $.assignment_statement
    ),
    
    // ----- //
    // Types //
    // ----- //
    
    _type: $ => choice(
      $.primitive_type,
      $.array_type,
      $.pointer_type,
      $.optional_type,
      $.function_type,
      $.memory_type,
      $._type_identifier,
      $.dot_type
    ),

    primitive_type: $ => choice(
      'i8', 'i16', 'i32', 'i64', 'i128',
      'u8', 'u16', 'u32', 'u64', 'u128',
      'f32', 'f64',
      'bool', 'string', 
      'byte', 'char'
    ),

    array_type: $ => choice(
      seq('[', ']', $._type),
      seq(
        '[', 
        field("length",$._expression), 
        ']', 
        $._type
      )
    ),

    _function_return_type: $ => choice(
      $._type,
      $.multi_return_type
    ),

    multi_return_type: $ => 
       prec.right(1, seq(
          $._type,
          repeat1(seq(',', $._type))
    )),

    _expression: $ => choice(
      $.identifier,
      $.int_literal,
      $.float_literal,
      $.string_literal,
      $.multi_string_literal,
      $.char_literal,
      $.true,
      $.false,
      $.null,
      $.call_expression,
      $.group_expression,
      $.prefix_expression,
      $.infix_expression,
      $.postfix_expression,
      $.dot_expression,
      $.use_expression,
      $.copy_expression,
      $.array_literal,
      $.struct_literal,
      $.function_literal,
    ),

    copy_expression: $ => prec.right(1, choice(
      seq(
        field("name", $.identifier), 
        '^'
      ),
      seq(
        field("name", $.identifier), 
        '^', 
        field("body", $.block_statement),
      ),
    )),

     group_expression: $ => prec(PREC.paren, seq(
      '(',
      $._expression,
      ')'
    )),

    prefix_expression: $ => prec(PREC.prefix, choice(
      seq('-', $._expression),
      seq('!', $._expression),
      seq('&', $._expression),
      seq('*', $._expression),
    )),

    postfix_expression: $ =>  prec(PREC.postfix, choice(
      seq($._expression, '++'),
      seq($._expression, '--'),
    )),

    infix_expression: $ => choice(
      ...[
        ['*', PREC.multiplicative],
        ['/', PREC.multiplicative],
        ['%', PREC.multiplicative],
        ['+', PREC.additive],
        ['-', PREC.additive],
        ['<', PREC.comparative],
        ['<=', PREC.comparative],
        ['>', PREC.comparative],
        ['>=', PREC.comparative],
        ['==', PREC.comparative],
        ['!=', PREC.comparative],
        ['&&', PREC.and],
        ['||', PREC.or],
        ['??', PREC.null_coalesce],
        ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field("left", $._expression),
          field("operator", operator),
          field("right", $._expression),
        ))
      )
    ),
    
   if_expression: $ => prec.right(seq(
      'if',
      field("condition", $._expression),
      field("body", $._if_expression_block),
      optional(seq(
        'else',
        field("alternative", choice($.if_expression, $._if_expression_block))
      ))
    )),
    _if_expression_block: $ => prec.right(seq(
      '{',
      optional(repeat($._statement)),
      $._expression,
      '}',
    )),
 

    match_expression: $ => prec.right(seq(
      'match',
      field("scrutinee", $._expression),
      '{',
      repeat($.match_expression_case),
      optional($.match_expression_default),
      '}'
    )),
    match_expression_case: $ => seq(
      'case',
      field("condition", $._expression),
      ':',
      field("body", $._match_expression_block),
    ),
    match_expression_default: $ => seq(
      'case',
      '_',
      ':',
      field("body", $._match_expression_block),
    ),
    _match_expression_block: $ => seq(
      optional(repeat($._statement)),
      $._expression,
     ),
    
    assignable_expression_list: $ => prec.right(seq(
      $._assignable_expression,
      optional(seq(',', $._assignable_expression))
    )),
    
     _assignable_expression: $ => prec.right(choice(
        $._expression,
        $.if_expression,
        $.match_expression,
    )),

    call_expression: $ => prec(PREC.primary, choice(
      seq(
        field("name", alias('make', $.identifier)),
        field("arguments",$.special_argument_list)
      ),
      seq(
        field("name", $.identifier),
        field("type_arguments", optional($.type_arguments)),
        '(',
        optional(
          field("arguments",seq(
          sepBy(',', $._expression),
          optional(',')
        ))),
      ')'
    ))),
    special_argument_list: $ => seq(
      '(',
      optional(seq(
        $._type,
        repeat(seq(',', $._expression)),
        optional(',')
      )),
      ')'
    ),

    dot_expression: $ => prec(PREC.primary, seq(
      field('operand', $._expression),
      '.',
      field('field', choice($.identifier, /\d+/))
    )),
    
    use_expression: $ => seq(
      "use",
      field("name", $.identifier),
      field("body", $.block_statement)
    ),

    // -------- //
    // Literals //
    // -------- //
    int_literal: $ => token(int_literal),
    float_literal: $ => token(float_literal),
    string_literal: $ => token(seq(
      '"',
      repeat(/[^"\n\r]/),
      '"'
    )),
    multi_string_literal: $ => token(seq(
      '`',
      repeat(/[^`]/),
      '`'
    )),
    char_literal: $ => token(choice(
      // Simple characters
      seq("'", /[^'\\]/, "'"),
  
      // Escaped characters
      seq("'", '\\', /[abtnr'"]/, "'"),
      seq("'", '\\', '\\', "'"),
  
      // Unicode characters
      seq("'", '\\u', /[0-9a-fA-F]{2}/, "'"),
      seq("'", '\\u', /[0-9a-fA-F]{4}/, "'"),
      seq("'", '\\u', /[0-9a-fA-F]{8}/, "'")
    )),
    function_literal: $ => prec.right(1, seq(
      'fn',
      field('parameters', $.parameter_list),
      field('result', optional($._function_return_type)),
      field('body', optional($.block_statement)),
    )),
    
    struct_literal: $ => prec.right(PREC.composite_literal, choice(
      $._struct_literal,
      $._struct_anonymous_literal,
    )),
    
    _struct_literal: $ => choice(
      seq(
        field("name", $.identifier),
        token.immediate('{'),
        choice(
          seq(sepBy(',', $.struct_named_field), optional(',')),
          seq(sepBy(',', $.struct_unnamed_field), optional(','))
        ),
        '}',
      ),
      seq(
        field("name", $.identifier),
        field("type_arguments", $.type_arguments),
        token.immediate('{'),
        choice(
          seq(sepBy(',', $.struct_named_field), optional(',')),
          seq(sepBy(',', $.struct_unnamed_field), optional(','))
        ),
        '}',
      )
    ),
    // NOTE: the precedence here is definitely too high
    // as tests pass i will leave as is. This will for
    // sure be a source of bugs in future.
    _struct_anonymous_literal: $ => prec(PREC.primary,seq(
      '{',   
       choice(
        seq(sepBy(',', $.struct_named_field), optional(',')),
        seq(sepBy(',', $.struct_unnamed_field), optional(','))
      ),
      '}'
    ),),
    struct_named_field: $ => seq(
      seq(
        field("key", $.identifier), 
        ":", 
        field("value",$._expression),
      ),
      ),
    struct_unnamed_field: $ => seq(
      field("value", $._expression),
    ),
     
    array_literal: $ => prec(PREC.composite_literal, seq(
      '[',
      optional(seq(
        sepBy(',', $._expression),
        optional(',')
      )),
      ']'
    )),

    // ---------- //
    // Statements //
    // ---------- //
    
    _statement: $ => choice(
      $.expression_statement,
      $.assignment_statement,
      $.return_statement,
      $.if_statement,
      $.for_statement,
      $.match_statement,
      $.block_statement,
      $.defer_statement,
      $.try_statement,
      $.catch_statement,
      $.raise_statement,
      $.next_keyword,
      $.break_keyword,
    ),

    assignment_statement: $ => seq(
      field("left", $.decleration_list),
      '=',
      field("right", $.assignable_expression_list),
    ),

    decleration_list: $ => prec.right(1, seq(
       choice(
         $.let_statement,
         $.var_statement,
         $.identifier,
         $.dot_expression,
       ),
      optional(seq(',',  choice(
         $.let_statement,
         $.var_statement,
         $.identifier,
         $.dot_expression,
      ))),
    )),

    let_statement: $ => seq(
      'let',
      $.identifier
    ),

    return_statement: $ => prec.right(1, seq(
      'return',
      optional(seq(
        $._expression,
        optional(seq(',', $._expression))
      ))
    )),

    block_statement: $ => seq(
      '{',
      repeat($._statement),
      '}'
    ),

    type_arguments: $ => seq(
      token.immediate('['),
      sepBy1(',', $._type),
      optional(','),
      ']'
    ),

    parameter_list: $ => seq(
      '(',
      optional(seq(
        sepBy(',', $.parameter),
        optional(',')
      )),
      ')'
    ),

    parameter: $ => seq(
      field("name", $.identifier),
      optional(seq(',', $.identifier)),
      field("type",$._type)
    ),
       
    // keywords
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*'*/,
    true: $ => 'true',
    false: $ => 'false',
